Update project files

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx2G
+org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	minecraft_version = 1.8.9
-	yarn_mappings = 1.8.9+build.202106250216
-	loader_version = 0.11.1+build.202102220648
+	yarn_mappings = 1.8.9+build.202201302314
+	loader_version = 0.12.12
 
 # Mod Properties
 	mod_version = 1.0.0
@@ -12,4 +12,4 @@ org.gradle.jvmargs=-Xmx2G
 	archives_base_name = bountifuladditions
 
 # Dependencies
-	fabric_version = 1.1.0+1.8.9
+	fabric_version = 1.2.2+1.8.9
