--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'fabric-loom' version "0.7-SNAPSHOT" // To use chocoloom, change the version to a commit hash
+	id 'fabric-loom' version "0.12-SNAPSHOT" // To use chocoloom, change the version to a commit hash
 	id 'maven-publish'
 }
 
@@ -17,16 +17,18 @@ repositories {
 	}
 }
 
-// Comment out this block if you're using Chocoloom
-// Comment when using loom 0.10
-minecraft {
-	intermediaryUrl = {
-		return "https://maven.legacyfabric.net/net/fabricmc/intermediary/" + it + "/intermediary-" + it + "-v2.jar";
-	}
-}
 loom {
-// Uncomment when using loom 0.10
-//	setIntermediaryUrl('https://maven.legacyfabric.net/net/fabricmc/intermediary/%1$s/intermediary-%1$s-v2.jar');
+	setIntermediaryUrl('https://maven.legacyfabric.net/net/fabricmc/intermediary/%1$s/intermediary-%1$s-v2.jar');
+	
+	// Only needed for versions not available from vanilla launcher by default.
+	// customMinecraftManifest.set("https://meta.legacyfabric.net/v2/manifest/${minecraft_version}")
+
+	// Required by 1.7.x
+	// runs {
+	// 	client {
+	// 		programArgs "--userProperties", "{}"
+	// 	}
+	// }
 }
 
 dependencies {
@@ -37,10 +39,9 @@ dependencies {
 	// Fabric API provides hooks for events, item registration, and more. As most mods will need this, it's included by default. 
 	// If you know for a fact you don't, it's not required and can be safely removed.
 	modImplementation ("net.legacyfabric.legacy-fabric-api:legacy-fabric-api:${fabric_version}") {
-		exclude module: "fabric-loader-1.8.9"
+		exclude module: "legacy-fabric-entity-events-v1"
 	}
 
-	// Hacks that make mac os work
 	if (System.getProperty("os.name").toLowerCase().contains("mac")) {
 		implementation 'org.lwjgl.lwjgl:lwjgl_util:2.9.4-nightly-20150209'
 		implementation 'org.lwjgl.lwjgl:lwjgl:2.9.4-nightly-20150209'
@@ -48,7 +49,6 @@ dependencies {
 	}
 }
 
-// More hacks that make mac os work
 if (System.getProperty("os.name").toLowerCase().contains("mac")) {
 	configurations.all {
 		resolutionStrategy {
@@ -86,7 +86,7 @@ java {
 
 jar {
 	from("LICENSE") {
-		rename { "${it}_${project.archivesBaseName}"}
+		rename { "${it}_${project.archivesBaseName}" }
 	}
 }
 
